--- a/AutoScalingECS.template
+++ b/AutoScalingECS.template
@@ -4,10 +4,10 @@
             "Type" : "String",
             "Description" : "Enter the owner of the ECS cluster."
         },
-        "ECSInstanceName" : {
+        "ECSClusterName" : {
             "Type" : "String",
-            "Default" : "ecs-instance",
-            "Description" : "Enter the name applied to the ECS instances."
+            "Default" : "test-ecs-cluster",
+            "Description" : "Enter the name applied to the ECS cluster."
         },
         "InstanceType" : {
             "Type" : "String",
@@ -28,6 +28,10 @@
             "Default": "0.0.0.0/0",
             "AllowedPattern": "(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})\\.(\\d{1,3})/(\\d{1,2})",
             "ConstraintDescription": "must be a valid IP CIDR range of the form x.x.x.x/x."
+        },
+        "VPC" : {
+            "Type" : "AWS::EC2::VPC::Id",
+            "Description" : "Select which VPC will host the cluster."
         },
         "Subnets" : {
             "Type" : "List<AWS::EC2::Subnet::Id>",
@@ -58,7 +62,7 @@
                 "MaxSize" : "3",
                 "Tags" : [ {
                         "Key" : "Name",
-                        "Value" : { "Ref" : "ECSInstanceName" },
+                        "Value" : { "Fn::Join" : [ "-", [ { "Ref" : "ECSClusterName" }, "instance" ] ] },
                         "PropagateAtLaunch" : "true"
                     },
                     {
@@ -139,13 +143,20 @@
         "InstanceSecurityGroup" : {
             "Type" : "AWS::EC2::SecurityGroup",
             "Properties" : {
-                "GroupDescription" : "Enable SSH access and HTTP from the load balancer only",
+                "VpcId" : { "Ref" : "VPC" },
+                "GroupDescription" : "Enable SSH access  only",
                 "SecurityGroupIngress" : [ {
                     "IpProtocol" : "tcp",
                     "FromPort" : "22",
                     "ToPort" : "22",
                     "CidrIp" : { "Ref" : "SSHLocation"}
                 } ]
+            }
+        },
+        "ECSCluster" : {
+            "Type" : "AWS::ECS::Cluster",
+            "Properties" : {
+                "ClusterName" : { "Ref" : "ECSClusterName"}
             }
         }
     }
